<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">知乎</string>
    <string name="action_settings">设置</string>
    <string name="index">首页</string>
    <string name="question">问题</string>
    <string name="quesText">添加问题…</string>
    <string name="describe">描述</string>
    <string name="descText">添加问题的补充说明…</string>
    <string name="topic">话题</string>
    <string name="anonymous">匿名提问</string>

</resources>
