<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
	    android:id="@+id/quiz_bar"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/base_bar_height"
	    android:orientation="horizontal"
		android:background="@color/quiz_bar_bg"
		android:gravity="center_vertical">
	    <TextView
	        android:id="@+id/quiz_question"
	        android:text="@string/question"
	        style="@style/quizBarTitle"/>
	     <View 
	        style="@style/divideLine_horizontal"/>
	    <TextView
	        android:id="@+id/quiz_describe"
	        android:text="@string/describe"
	        style="@style/quizBarTitle"/>
        <View 
            style="@style/divideLine_horizontal"/>
	    <TextView
	        android:id="@+id/quiz_topic"
	        android:text="@string/topic"
	        style="@style/quizBarTitle"/>
    </LinearLayout>
    <com.zhihu.components.ScrollLayout  
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/ScrollLayout"    
      android:layout_width="fill_parent"    
      android:layout_height="fill_parent">
      
      <RelativeLayout
          android:id="@+id/editTitlelayout"
          android:layout_width="match_parent"
          android:layout_height="match_parent">

	      <EditText
	          android:id="@+id/editTextTitle"
	          android:hint="@string/quesText"
	          style="@style/quizEditText" >
	          <requestFocus />
	      </EditText>
      
	      <LinearLayout
	          android:layout_width="match_parent"
	          android:layout_height="30dip"
	          android:layout_alignParentBottom="true"
	          android:orientation="horizontal"
	          android:background="@color/divider"
	          android:layout_gravity="bottom">
	          <CheckBox
	              android:id="@+id/checkBox"
	              android:text="@string/anonymous"
	              style="@style/checkBox" />
	     </LinearLayout>
      </RelativeLayout>

      <View   
        android:background="#555555"
        android:layout_width="10dip"    
        android:layout_height="fill_parent"/>
      	      
      <RelativeLayout
          android:id="@+id/editDesclayout"
          android:layout_width="match_parent"
          android:layout_height="match_parent">
  
	      <EditText
	          android:id="@+id/editTextDesc"
	          android:hint="@string/descText"
	          style="@style/quizEditText" >
          <requestFocus />

          </EditText>
      
      </RelativeLayout>
       
      <View
        android:background="#555555"
        android:layout_width="10dip"    
        android:layout_height="fill_parent"/>
          
      <RelativeLayout
          android:id="@+id/editTopiclayout"
          android:layout_width="match_parent"
          android:layout_height="match_parent">
          
	      <FrameLayout     
	        android:background="#654321"
	        android:layout_width="fill_parent"    
	        android:layout_height="fill_parent">      
	      </FrameLayout>
	      
	  </RelativeLayout> 
       
    </com.zhihu.components.ScrollLayout>

</LinearLayout>
